# mcp-server

./: Dockerfile  README.md  mcp-demo.service  pyproject.toml  server.py
.github/workflows/: pylint.yml
